updated the personal profile

--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,8 @@
             <li><a href="{{BASE}}index.html#skills" class="nav-link">Skills</a></li>
             <li><a href="{{BASE}}index.html#services" class="nav-link">Services</a></li>
             <li><a href="{{BASE}}blog/" class="nav-link">Blog</a></li>
-            <li><a href="{{BASE}}index.html#contact" class="nav-link">Contact</a></li>
+            <li><a href="{{BASE}}books/" class="nav-link">Bookshelf</a></li>
+            <li><a href="{{BASE}}papers/" class="nav-link">Papershelf</a></li>
         </ul>
     </div>
 </nav>
