--- a/components/header.html
+++ b/components/header.html
@@ -14,6 +14,11 @@
             <li><a href="{{BASE}}blog/" class="nav-link">Blog</a></li>
             <li><a href="{{BASE}}books/" class="nav-link">Bookshelf</a></li>
             <li><a href="{{BASE}}papers/" class="nav-link">Papershelf</a></li>
+            <li>
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </li>
         </ul>
     </div>
 </nav>
